2012-09-09  Richard Murray  <murray@altura.local>

	* txtl_rnap_rnap70.m: added in enzymatric reaction for transcription
	to rate limit the effect of NTP usage.  Parameters need to be updated.

	* txtl_prom_p70.m, rxtl_prom_ptet.m, txtl_rnap_rnap70.m: moved
	generic RNAP70 reactions to rxtl_rnap_rnap70.m since they work for
	any promoter using RNAP70.

	* txtl_dna.m: added in enzymatic reaction for translation to rate
	limit the effect of amino acid usage.  Parameters need to be updated.

	* txtl_rbs_rbs.m, txtl_dna.m: moved translation reaction setup to
	txtl_dna.m

2012-09-09  Richard Murray  <murray@altura.local>

	* ./: set svn:mime-type to text/plain for all files

	* txtl_protein_deGFP.m: added new protein setup file to include GFP
	maturation.  Mature deGFP is [protein deGFP*].

	* txtl_rbs_rbs.m: updated reaction rates to try to get them to be
	more realistic

	* txtl_extract.m: added dilution factor in calculating RNAP and
	ribosome concentrations; updated concentrations.

	* txtl_prom_ptet.m, txtl_prom_p70.m: updated binding and
	transcription rates

	* txtl_rbs_rbs.m, txtl_dna.m: moved mRNA degradation from RBS setup
	file to DNA setup file

	* negautoreg.m: updated plotting format; added in GFP for comparison

2012-09-09  Richard Murray  <murray@altura.local>

	* geneexpr.m (indexlist): new example, intended to eventually match
	protsynt81bis.m

	* txtl_dna.m (protein): added call to protein specific file, if it
	exists

	* txtl_protein_tetR.m: new file to describe aTc, TetR intearctions

	* negautoreg.m, txtl_prom_ptet.m: moved DNA binding reactions for
	tetR to promoter file from example reactions

	* txtl_*.m: updated copyright info to include the actual copyright,
	placed in Caltech's name.

2012-09-08  Richard Murray  <murray@altura.local>

	* txtl_prom_ptet.m: added ptet promoter file; still needs correct
	parameters.

2012-09-08  Richard Murray  <murray@altura.local>

	* txtl_*.m: new structure for TX-TL models using Simbiology
